began to document solutions for chapter 1

--- a/doc/qmeesm.tex
+++ b/doc/qmeesm.tex
@@ -1,10 +1,15 @@
-\author{ninux}
-\date{today}
+% base document setting
+\documentclass[a4paper]{book}
 
-\documentclass[a4paper]{article}
+% load packages
+\usepackage{pkg/layout}
+\usepackage{pgfplots}
+\usepackage{pgfplotstable}
+\usepackage{filecontents}
 
+% user defined macros
+
+% document
 \begin{document}
-
-hello, world!
-
+	\input{tex/contents}
 \end{document}
