documented solutions up to exercise 2-3

--- a/doc/pkg/layout.sty
+++ b/doc/pkg/layout.sty
@@ -20,6 +20,8 @@
 \usepackage{siunitx}
 \usepackage[toc,page]{appendix}
 \usepackage{mathtools}
+\usepackage{braket}
+\usepackage{commath}
 
 \usepackage[version=4]{mhchem}
 
@@ -125,7 +127,7 @@
 \DeclareSIUnit \gauss { Gs }		% gauss, magnetic flux density
 \DeclareSIUnit \bp { bp }			% basic period, CERN LHC timebase
 
-\DeclarePairedDelimiter\abs{\lvert}{\rvert}%
-\DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+%\DeclarePairedDelimiter\abs{\lvert}{\rvert}%
+%\DeclarePairedDelimiter\norm{\lVert}{\rVert}%
 
 \usepackage[hidelinks]{hyperref} % include as last package!
