fixed unit error in exercise 1-2

--- a/doc/tex/ch01/ch01.tex
+++ b/doc/tex/ch01/ch01.tex
@@ -24,7 +24,7 @@ The workfunction $\phi$ of Titanium is
 \[
 	\phi
 	= \SI{4.33}{\eV}
-	= 4.33 \frac{\SI{1.6e-19}{\joule}}{\SI{1}{\eV}}
+	= \SI{4.33}{\eV} \frac{\SI{1.6e-19}{\joule}}{\SI{1}{\eV}}
 	= \SI{6.93e-19}{\joule}
 \]
 The work function $\phi$ describes the amount of energy that is required to
