minor fixes and typo corrections

--- a/doc/tex/ch01/ch01.tex
+++ b/doc/tex/ch01/ch01.tex
@@ -98,7 +98,7 @@ part which is to the left of the real part. Hence, this reflected part is
 propagating in opposite direction of the incident wave.
 
 \section{Exercise 2-2}
-In general, from an electrical engineers point of viwe, the Heisenberg
+In general, from an electrical engineers point of view, the Heisenberg
 uncertainty principle describes the same relation as signals in the time and
 frequency domain when performing the Fourier transforms. If a signal is very
 localized in time (e.g. dirac delta function or step function), it's
@@ -123,7 +123,7 @@ particle is described by
 	p = \frac{h}{\lambda}
 \]
 If we want to know the exact momentum of the particle, we need an exact
-value for its wavelength $\lambda$. However, herein lied the difficulty,
+value for its wavelength $\lambda$. However, herein lies the difficulty,
 as we do not knwo the exact wavelength of the particle and hence we
 have an uncertainty in the particles momentum.
 
@@ -163,9 +163,9 @@ $\abs{\psi(x,y)}^2$ must have the unit of $[L^{-2}$. Therefore, the
 wavefunction itself must have the unit of $[\sqrt{L^{-2]}}]$ or $[L^{-1}]$.
 
 \subsection{3-D Case}
-Analogous to the 3-D case, we investigate a \emph{volume}. Hence, we now
-use $\int \dif V$. The integration thus gives a dimension of $[L^3]$. To
-get a dimensionless result, the square of the wavefunction
+Analogous to the 2-D case, for the 3-D case we investigate a \emph{volume}.
+Hence, we now use $\int \dif V$. The integration thus gives a dimension of
+$[L^3]$. To get a dimensionless result, the square of the wavefunction
 $\abs{\psi(x,y,z)}^2$ must have the unit of $[L^{\frac{-3}{2}}]$.
 
 % \begin{table}[h!]
