edited solution for exercise 2-5

--- a/doc/tex/ch01/ch01.tex
+++ b/doc/tex/ch01/ch01.tex
@@ -1,5 +1,6 @@
 \chapter{Introduction}
 
+\newpage
 \section{Exercise 1-1}
 The equation for the momentum
 \begin{equation}
@@ -19,6 +20,7 @@ directly with the corresponding units which gives
 	= \left[ \frac{\si{\kilogram\meter}}{\si{\second}} \right]
 \]
 
+\newpage
 \section{Exercise 1-2}
 The workfunction $\phi$ of Titanium is
 \[
@@ -46,6 +48,7 @@ radiation. Hence, we use the relation $c_0 = \lambda f$. With this we get
 
 \lstinputlisting[caption=Exercise 1-2]{./../ch1/ex_1_2.m}
 
+\newpage
 \section{Exercise 1-3}
 At the beginning, the electron is considered to have only KE and no PE. The
 amount of initial KE ($KE_1$) can be calculated with the given initial
@@ -74,6 +77,7 @@ determined as
 
 \lstinputlisting[caption=Exercise 1-3]{./../ch1/ex_1_3.m}
 
+\newpage
 \section{Exercise 2-1}
 As the particle goes into the barrier, a certain portion of its inital KE
 is exchanged for PE. While the total energy stays the same, the wavelength
@@ -97,6 +101,7 @@ imaginary part of the wave. However, the reflected part shows an imaginary
 part which is to the left of the real part. Hence, this reflected part is
 propagating in opposite direction of the incident wave.
 
+\newpage
 \section{Exercise 2-2}
 In general, from an electrical engineers point of view, the Heisenberg
 uncertainty principle describes the same relation as signals in the time and
@@ -132,6 +137,7 @@ uncertainty in both position and momentum. However, it would be good to
 imagine the two extreme cases where the uncertainty of either the momentum
 or the position is going towards zero.
 
+\newpage
 \section{Exercise 2-3}
 
 \subsection{1-D Case}
@@ -179,6 +185,7 @@ $\abs{\psi(x,y,z)}^2$ must have the unit of $[L^{\frac{-3}{2}}]$.
 % 	\end{tabular}
 % \end{table}
 
+\newpage
 \section{Exercise 2-4}
 The probability that the particle is located in a region $a \leq x \leq b$ is
 given by the integral of the squared wavefunction $\abs{\psi(x)}^2$ over that
@@ -299,3 +306,85 @@ individual intervals.
 
 
 \lstinputlisting[caption=Exercise 2-4]{./../ch1/ex_2_4.m}
+
+\newpage
+\section{Exercise 2-5}
+
+Figures \ref{fig:ex_2_5_a} and \ref{fig:ex_2_5_b} show the simulation results
+for the wave with different wavelengts ($\lambda_1 = \SI{10}{\nano\m}$,
+$\lambda_2 = \SI{20}{\nano\m}$). The results show that the wave with the
+shorter wavelength is propagating faster. The reason for this is simple, the
+shorter the wavelength the higher the KE and hence the higher the velocity.
+
+Figure \ref{fig:ex_2_5_c} shows the simulation result for the negative
+wavelength ($\lambda = \SI{-10}{\nano\m}$). Using a negative wavelenght the
+direction in which the wave propagates changes. Hence, the wave is now
+propagating to the left (negative to $x$). Again, the imaginary part is leading.
+Besides the direction, everything else stays the same as compared to a
+positive wavelength.
+
+\newpage
+
+\begin{figure}
+	\centering
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_a_0.png}
+	\end{subfigure}
+
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_a_1.png}
+	\end{subfigure}
+	
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_a_2.png}
+	\end{subfigure}
+	
+	\caption{$\lambda = \SI{10}{\nano\m}$.}
+	\label{fig:ex_2_5_a}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+	\centering
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_b_0.png}
+	\end{subfigure}
+
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_b_1.png}
+	\end{subfigure}
+	
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_b_2.png}
+	\end{subfigure}
+	
+	\caption{$\lambda = \SI{20}{\nano\m}$.}
+	\label{fig:ex_2_5_b}
+\end{figure}
+
+\newpage
+
+\begin{figure}
+	\centering
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_c_0.png}
+	\end{subfigure}
+
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_c_1.png}
+	\end{subfigure}
+	
+	\begin{subfigure}{1\linewidth}
+		\includegraphics[width=1\linewidth]{./../ch1/ex_2_5_c_2.png}
+	\end{subfigure}
+	
+	\caption{$\lambda = \SI{-10}{\nano\m}$.}
+	\label{fig:ex_2_5_c}
+\end{figure}
+
+\clearpage
+
+\lstinputlisting[caption=Exercise 2-5 a]{./../ch1/ex_2_5_a.m}
+\lstinputlisting[caption=Exercise 2-5 b]{./../ch1/ex_2_5_b.m}
+\lstinputlisting[caption=Exercise 2-5 c]{./../ch1/ex_2_5_c.m}
