bringing project back to life by commiting all intermediate changes

--- a/doc/tex/ch01/ch01.tex
+++ b/doc/tex/ch01/ch01.tex
@@ -79,10 +79,10 @@ determined as
 
 \newpage
 \section{Exercise 2-1}
-As the particle goes into the barrier, a certain portion of its inital KE
+As the particle goes into the barrier, a certain portion of its initial KE
 is exchanged for PE. While the total energy stays the same, the wavelength
 changes as it depends on the KE of the particle. As the particle has lower
-KE, the wavelenght gets larger (i.e. the frequency geth lower) according to
+KE, the wavelength gets larger (i.e. the frequency gets lower) according to
 \[
 	KE = \frac{1}{2 m_e} \left(\frac{h}{\lambda}\right)^2
 	\Rightarrow
@@ -95,7 +95,7 @@ wave prior to the particle arriving at the barrier, has a leading imaginary
 part to the right. Hence, the particle is moving to the right and thus
 towards the potential barrier. After the barrier is reached, the wave is
 split in two parts; the incident wave is split in a transmissive and
-reflective part. The transmissive part is the part riht of the barrier, which
+reflective part. The transmissive part is the part right of the barrier, which
 is in the direction of the incident wave. This is evident by the leading
 imaginary part of the wave. However, the reflected part shows an imaginary
 part which is to the left of the real part. Hence, this reflected part is
@@ -106,7 +106,7 @@ propagating in opposite direction of the incident wave.
 In general, from an electrical engineers point of view, the Heisenberg
 uncertainty principle describes the same relation as signals in the time and
 frequency domain when performing the Fourier transforms. If a signal is very
-localized in time (e.g. dirac Delta function or step function), it's
+localized in time (e.g. Dirac Delta function or step function), it's
 bandwidth is very large (e.g. towards infinite bandwidth or white noise).
 The same holds for the opposite direction. If a signal is very localized in
 the frequency domain (i.e. a perfectly constant sine wave of frequency $f$),
@@ -148,7 +148,7 @@ normalized probability calculation for the position
 	= \int_{-\infty}^{+\infty}{\abs{\psi(x)}^2} \dif x
 	= 1
 \]
-The physical interpretation of this equaiton is that the square of the 
+The physical interpretation of this equation is that the square of the 
 wavefunction gives the probability(density) to find the particle in a
 region of \emph{distance} $x$. If we integrate this along $x$, we get
 the probability that the particle is within the investigated region of $x$.
@@ -161,7 +161,7 @@ $\abs{\psi(x)}^2$. Therefore, the wavefunction itself must have the unit of
 $[\sqrt{L^{-1}}]$ or $[L^{\frac{-1}{2}}]$.
 
 \subsection{2-D Case}
-In the 2-D case, we no longer investige a simple distance but a \emph{surface}.
+In the 2-D case, we no longer investigate a simple distance but a \emph{surface}.
 Thus, instead of $\int \dif x$ we now use $\int \dif s$. Analogous to the
 1-D case, we can identify that the integration gives a dimension of $[L^2]$.
 To get a dimensionless result, the square of the wavefunction
@@ -247,7 +247,7 @@ as $kA$. The approximation made is shown in Figure \ref{fig:ex_2_4_magnitude}.
 From Figure \ref{fig:ex_2_4_magnitude} we see that the factor are
 $k_3 = 1$, $k_4=k_2=\frac{1}{2}$, and $k_5=k_1=\frac{1}{10}$.
 As we now do not have a continuous function over $x$ but a piecewise
-constant over equidistant intervals (i.e. discrete in amplitide and $x$),
+constant over equidistant intervals (i.e. discrete in amplitude and $x$),
 we can replace the continuous integration with a simple sum.
 \[
 	\int_a^b \abs{\psi(x)}^2 \dif x = 1
