--- a/doc/pkg/layout.sty
+++ b/doc/pkg/layout.sty
@@ -19,6 +19,7 @@
 \usepackage{listings}
 \usepackage{siunitx}
 \usepackage[toc,page]{appendix}
+\usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{braket}
 \usepackage{commath}
